# nu

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  c_cpp_properties.json  project.code-workspace
include/: lstr.h  stb_ds.h
nu/: CMakeLists.txt  nu.c  nu.h  nuarr.c  nubool.c  nunum.c  nuobj.c  nuop.c  nurbt.c  nurbt.h  nustr.c  nuvm.c  nuvmop.inl  nuvmops.c  nuvmops.inl  utf8.h  utils.h
nu/test/: CMakeLists.txt  test.c
nu/tests/: CMakeLists.txt  tests.c
src/: CMakeLists.txt  nu.c  nu.h  nuarr.c  nubase.c  nubool.c  nunum.c  nuobj.c  nurbt.c  nurbt.h  nustr.c  utf8.h  utils.h
std/tests/: funchelloworld.nu  helloworld.nu  object.nu
tests/: CMakeLists.txt  tests.c  tests.h
tests/nu/: object.nu
tools/: genops.py
